[package]
name = "obo"
version = "0.1.0"
authors = ["Geert Depuydt <geert_depuydt@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastobo = "0.8.3"
ureq = "0.11.4"
serde = "1.0.104"
serde_json = "1.0.48"

[dependencies.fastobo-graphs]
version = "0.2.0"
feature="obo"
