[package]
name = "obo"
version = "0.1.0"
authors = ["Geert Depuydt <geert_depuydt@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastobo = "0.8.3"
ureq = "0.11.4"
redis = "0.15.1"
redisgraph = "0.1.0"
